firewall.conf
# Generated by iptables-save v1.4.21 on Fri Nov  8 23:45:19 2019
*nat
:PREROUTING ACCEPT [1818:134481]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [37:2550]
:POSTROUTING ACCEPT [8:420]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
COMMIT
# Completed on Fri Nov  8 23:45:19 2019
# Generated by iptables-save v1.4.21 on Fri Nov  8 23:45:19 2019
*filter
:INPUT DROP [81:9031]
:FORWARD DROP [16:796]
:OUTPUT DROP [13:846]
-A INPUT -s 192.168.20.2/32 -d 192.168.20.1/32 -i eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -d 8.8.8.8/32 -i eth2 -o eth0 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -d 8.8.8.8/32 -i eth2 -o eth0 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -i eth2 -o eth1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
COMMIT
# Completed on Fri Nov  8 23:45:19 2019
